// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddTarget /> should render 1`] = `
<ModalDialog
  headerText="Add target"
  label="AddTarget"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <TargetForm
        description=""
        errorName=""
        length={0}
        name=""
        onChange={[Function]}
        onClick={[Function]}
        required={false}
      />
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <Button
        color="blue"
        disabled={false}
        icon="save"
        tipPlacement="top"
        type="submit"
      >
        Submit
      </Button>
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<AddTarget /> should render error when submitted without name 1`] = `
<ModalDialog
  headerText="Add target"
  label="AddTarget"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <TargetForm
        description=""
        errorName="Required Field"
        length={0}
        name=""
        onChange={[Function]}
        onClick={[Function]}
        required={false}
      />
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <Button
        color="blue"
        disabled={false}
        icon="save"
        tipPlacement="top"
        type="submit"
      >
        Submit
      </Button>
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<AddTarget /> should render required when form onClick() prop is called 1`] = `
<ModalDialog
  headerText="Add target"
  label="AddTarget"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <TargetForm
        description=""
        errorName=""
        length={0}
        name=""
        onChange={[Function]}
        onClick={[Function]}
        required={true}
      />
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <Button
        color="blue"
        disabled={false}
        icon="save"
        tipPlacement="top"
        type="submit"
      >
        Submit
      </Button>
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;
